Fix spacing on details pages

--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -1,4 +1,4 @@
-.container, body {
+.container, body, html {
     width: 100%;
     height: 100%;
     color: var(--c-white);
@@ -15,8 +15,13 @@ h1 {
 {
     width: 50%;
     float: left;
-    height: 100%;
+    height: auto;
     background: none;
+}
+
+.boxrow
+{
+    height: auto;
 }
 
 .img
